configs: Cleanup naming in xpolicy configurations
Use variables for everything to more easily support
native ports.

[configs] Cleanup naming in xpolicy configurations

--- a/sparse/etc/pulse/xpolicy.conf
+++ b/sparse/etc/pulse/xpolicy.conf
@@ -27,24 +27,43 @@
 # Defaults. To override define variables with new values
 # in xpolicy.conf.d directory (for example xpolicy.conf.d/xvars.conf).
 [variable]
+input_equals = "true"
+output_equals = "true"
+voip_equals = "true"
+
+# inputs and outputs
+input_builtin = droid.input.builtin
+input_external = droid.input.external
+output_low_latency = droid.output.low_latency
+output_media_latency = droid.output.media_latency
+output_primary = droid.output.primary
+
+# input and output ports
+input_wired_headset = input-wired_headset
+input_voice_call = input-voice_call
+output_earpiece = output-earpiece
+output_speaker = output-speaker
+output_wired_headphone = output-wired_headphone
+output_wired_headset = output-wired_headset
+
 # sinks, sources and ports
-droid_source_input_microphone = input-builtin_mic
-droid_source_input_backmicrophone = input-back_mic
-droid_source_input_fmradio = input-fm_tuner
-droid_sink_port_change_delay = delayed_port_change
-sink_class_voip = droid.output.media_latency
+source_input_microphone = input-builtin_mic
+source_input_backmicrophone = input-back_mic
+source_input_fmradio = input-fm_tuner
+sink_port_change_delay = delayed_port_change
+sink_class_voip = $output_media_latency
 delay_time = 150
 # default to single output, if you know your device can support simultaneous
 # output change these in xvars.conf.
-twin_speaker_headset = output-speaker
-twin_speaker_headphone = output-speaker
-twin_speaker_lineout = output-speaker
+twin_speaker_headset = $output_speaker
+twin_speaker_headphone = $output_speaker
+twin_speaker_lineout = $output_speaker
 # cards and profiles
-droid_card = droid_card.primary
-droid_card_profile = default
+card = droid_card.primary
+card_profile = default
 # bluetooth sco
-droid_sco_output = output-bluetooth_sco
-droid_sco_input = input-bluetooth_sco_headset
+sco_output = output-bluetooth_sco
+sco_input = input-bluetooth_sco_headset
 
 # -------- Group section -------------------------------------------------------
 
@@ -61,13 +80,13 @@ source = sink.null.monitor
 [group]
 name   = background
 flags  = limit_volume, cork_stream
-sink   = droid.output.media_latency@equals:"true"
-source = droid.input.builtin@equals:"true"
+sink   = $output_media_latency@equals:$output_equals
+source = $input_builtin@equals:$input_equals
 
 [group]
 name   = systemsound
 flags  = set_sink, limit_volume, cork_stream, mute_by_route
-sink   = droid.output.media_latency@equals:"true"
+sink   = $output_media_latency@equals:$output_equals
 
 [group]
 name   = btnotify
@@ -77,22 +96,22 @@ sink   = startswith:"bluez_sink"
 [group]
 name   = feedbacksound
 flags  = set_sink, limit_volume, cork_stream, mute_by_route
-sink   = droid.output.low_latency@equals:"true"
+sink   = $output_low_latency@equals:$output_equals
 
 [group]
 name   = inputsound
 flags  = set_sink, limit_volume, cork_stream, mute_by_route
-sink   = droid.output.low_latency@equals:"true"
+sink   = $output_low_latency@equals:$output_equals
 
 [group]
 name   = event
 flags  = set_sink, limit_volume, cork_stream, mute_by_route
-sink   = droid.output.media_latency@equals:"true"
+sink   = $output_media_latency@equals:$output_equals
 
 [group]
 name   = alarm
 flags  = set_sink, limit_volume, mute_by_route, cork_stream, media_notify
-sink   = droid.output.media_latency@equals:"true"
+sink   = $output_media_latency@equals:$output_equals
 
 [group]
 name   = flash
@@ -109,18 +128,18 @@ flags  = route_audio, limit_volume, cork_stream
 [group]
 name   = voiceui
 flags  = set_sink, limit_volume, cork_stream
-sink   = droid.output.low_latency@equals:"true"
+sink   = $output_low_latency@equals:$output_equals
 
 [group]
 name   = ringtone
 flags  = set_sink, limit_volume, mute_by_route, cork_stream, media_notify
-sink   = droid.output.media_latency@equals:"true"
+sink   = $output_media_latency@equals:$output_equals
 
 [group]
 name   = camera
 flags  = set_sink, set_source, limit_volume, cork_stream
-sink   = droid.output.media_latency@equals:"true"
-source = droid.input.builtin@equals:"true"
+sink   = $output_media_latency@equals:$output_equals
+source = $input_builtin@equals:$input_equals
 
 [group]
 name   = videoeditor
@@ -129,20 +148,20 @@ flags  = route_audio, limit_volume, cork_stream
 [group]
 name   = ipcall
 flags  = set_sink, set_source, limit_volume, cork_stream
-sink   = droid.output.low_latency@equals:"true"
-source = droid.input.builtin@equals:"true"
+sink   = $output_low_latency@equals:$output_equals
+source = $input_builtin@equals:$input_equals
 
 [group]
 name   = call
 flags  = set_sink, set_source
-sink   = droid.output.low_latency@equals:"true"
-source = droid.input.builtin@equals:"true"
+sink   = $output_low_latency@equals:$output_equals
+source = $input_builtin@equals:$input_equals
 
 [group]
 name   = navigator
 flags  = set_sink, set_source
-sink   = droid.output.media_latency@equals:"true"
-source = droid.input.builtin@equals:"true"
+sink   = $output_media_latency@equals:$output_equals
+source = $input_builtin@equals:$input_equals
 
 [group]
 name   = cstone
@@ -151,12 +170,12 @@ flags  = route_audio, set_source, limit_volume
 [group]
 name   = alwayson
 flags  = set_sink, limit_volume, cork_stream
-sink   = droid.output.media_latency@equals:"true"
+sink   = $output_media_latency@equals:$output_equals
 
 [group]
 name   = nonsilent
 flags  = set_sink, limit_volume, cork_stream
-sink   = droid.output.media_latency@equals:"true"
+sink   = $output_media_latency@equals:$output_equals
 
 [group]
 name   = internal
@@ -183,7 +202,7 @@ flags  = route_audio, limit_volume, mute_by_route
 [group]
 name   = probesink
 flags  = set_sink, limit_volume, cork_stream
-sink   = droid.output.media_latency@equals:"true"
+sink   = $output_media_latency@equals:$output_equals
 
 # -------- Card section --------------------------------------------------------
 
@@ -195,233 +214,233 @@ sink = startswith:"bluez_sink"
 
 [device]
 type  = ihfandheadset
-sink  = droid.output.media_latency@equals:"true"
-ports = droid.output.primary@equals:"true"->$twin_speaker_headset
-flags = $droid_sink_port_change_delay
+sink  = $output_media_latency@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$twin_speaker_headset
+flags = $sink_port_change_delay
 delay = $delay_time
 
 [device]
 type  = ihfandheadset
-source= droid.input.external@equals:"true"
-ports = droid.input.external@equals:"true"->input-wired_headset
+source= $input_external@equals:$input_equals
+ports = $input_external@equals:$input_equals->$input_wired_headset
 
 [device]
 type  = ihfandheadphone
-sink  = droid.output.media_latency@equals:"true"
-ports = droid.output.primary@equals:"true"->$twin_speaker_headphone
-flags = $droid_sink_port_change_delay
+sink  = $output_media_latency@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$twin_speaker_headphone
+flags = $sink_port_change_delay
 delay = $delay_time
 
 [device]
 type  = ihfandlineout
-sink  = droid.output.media_latency@equals:"true"
-ports = droid.output.primary@equals:"true"->$twin_speaker_lineout
-flags = $droid_sink_port_change_delay
+sink  = $output_media_latency@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$twin_speaker_lineout
+flags = $sink_port_change_delay
 delay = $delay_time
 
 [device]
 type  = bta2dp
 sink  = startswith:"bluez_sink"
-ports = droid.output.primary@equals:"true"->output-speaker
+ports = $output_primary@equals:$output_equals->$output_speaker
 flags = disable_notify
 
 [device]
 type  = bta2dpforalien
 sink  = startswith:"bluez_sink"
-ports = droid.output.primary@equals:"true"->output-speaker
+ports = $output_primary@equals:$output_equals->$output_speaker
 flags = disable_notify
 
 [device]
 type  = bthsp
-sink  = droid.output.primary@equals:"true"
-ports = droid.output.primary@equals:"true"->$droid_sco_output
+sink  = $output_primary@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$sco_output
 flags = disable_notify, refresh_always
 
 [device]
 type   = bthsp
-source = droid.input.external@equals:"true"
-ports  = droid.input.external@equals:"true"->$droid_sco_input
+source = $input_external@equals:$input_equals
+ports  = $input_external@equals:$input_equals->$sco_input
 flags  = disable_notify, refresh_always
 
 [device]
 type  = bthspforcall
-sink  = droid.output.primary@equals:"true"
-ports = droid.output.primary@equals:"true"->$droid_sco_output
+sink  = $output_primary@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$sco_output
 flags = disable_notify, refresh_always, delayed_port_change
 
 [device]
 type   = bthspforcall
-source = droid.input.external@equals:"true"
-ports  = droid.input.external@equals:"true"->$droid_sco_input
+source = $input_external@equals:$input_equals
+ports  = $input_external@equals:$input_equals->$sco_input
 flags  = disable_notify, refresh_always
 
 [device]
 type  = bthspforalien
-sink  = $sink_class_voip@equals:"true"
-ports = droid.output.primary@equals:"true"->$droid_sco_output
+sink  = $sink_class_voip@equals:$voip_equals
+ports = $output_primary@equals:$output_equals->$sco_output
 flags = disable_notify, refresh_always, delayed_port_change
 
 [device]
 type   = bthspforalien
-source = droid.input.external@equals:"true"
-ports  = droid.input.external@equals:"true"->$droid_sco_input
+source = $input_external@equals:$input_equals
+ports  = $input_external@equals:$input_equals->$sco_input
 flags  = disable_notify, refresh_always
 
 [device]
 type  = bthfp
-sink  = droid.output.primary@equals:"true"
-ports = droid.output.primary@equals:"true"->$droid_sco_output
+sink  = $output_primary@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$sco_output
 flags = disable_notify, refresh_always
 
 [device]
 type   = bthfp
-source = droid.input.external@equals:"true"
-ports  = droid.input.external@equals:"true"->$droid_sco_input
+source = $input_external@equals:$input_equals
+ports  = $input_external@equals:$input_equals->$sco_input
 flags  = disable_notify, refresh_always
 
 [device]
 type  = bthfpforcall
-sink  = droid.output.primary@equals:"true"
-ports = droid.output.primary@equals:"true"->$droid_sco_output
+sink  = $output_primary@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$sco_output
 flags = disable_notify, refresh_always, delayed_port_change
 
 [device]
 type   = bthfpforcall
-source = droid.input.external@equals:"true"
-ports  = droid.input.external@equals:"true"->$droid_sco_input
+source = $input_external@equals:$input_equals
+ports  = $input_external@equals:$input_equals->$sco_input
 flags  = disable_notify, refresh_always
 
 [device]
 type  = bthfpforalien
-sink  = $sink_class_voip@equals:"true"
-ports = droid.output.primary@equals:"true"->$droid_sco_output
+sink  = $sink_class_voip@equals:$voip_equals
+ports = $output_primary@equals:$output_equals->$sco_output
 flags = disable_notify, refresh_always, delayed_port_change
 
 [device]
 type   = bthfpforalien
-source = droid.input.external@equals:"true"
-ports  = droid.input.external@equals:"true"->$droid_sco_input
+source = $input_external@equals:$input_equals
+ports  = $input_external@equals:$input_equals->$sco_input
 flags  = disable_notify, refresh_always
 
 [device]
 type   = headset
-source = droid.input.external@equals:"true"
-ports  = droid.input.external@equals:"true"->input-wired_headset
+source = $input_external@equals:$input_equals
+ports  = $input_external@equals:$input_equals->$input_wired_headset
 flags  = disable_notify, refresh_always
 
 [device]
 type  = headset
-sink  = droid.output.media_latency@equals:"true"
-ports = droid.output.primary@equals:"true"->output-wired_headset
-flags = disable_notify, refresh_always, $droid_sink_port_change_delay
+sink  = $output_media_latency@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$output_wired_headset
+flags = disable_notify, refresh_always, $sink_port_change_delay
 delay = $delay_time
 
 [device]
 type  = headsetforcall
-sink  = droid.output.primary@equals:"true"
-ports = droid.output.primary@equals:"true"->output-wired_headset
+sink  = $output_primary@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$output_wired_headset
 flags = refresh_always, delayed_port_change
 delay = 200
 
 [device]
 type   = headsetforcall
-source = droid.input.external@equals:"true"
-ports  = droid.input.external@equals:"true"->input-wired_headset
+source = $input_external@equals:$input_equals
+ports  = $input_external@equals:$input_equals->$input_wired_headset
 
 [device]
 type  = headsetforalien
-sink  = $sink_class_voip@equals:"true"
-ports = droid.output.primary@equals:"true"->output-wired_headset
+sink  = $sink_class_voip@equals:$voip_equals
+ports = $output_primary@equals:$output_equals->$output_wired_headset
 flags = refresh_always
 
 [device]
 type   = headsetforalien
-source = droid.input.external@equals:"true"
-ports  = droid.input.external@equals:"true"->input-wired_headset
+source = $input_external@equals:$input_equals
+ports  = $input_external@equals:$input_equals->$input_wired_headset
 
 [device]
 type  = headphone
-sink  = droid.output.media_latency@equals:"true"
-ports = droid.output.primary@equals:"true"->output-wired_headphone
-flags = disable_notify, refresh_always, $droid_sink_port_change_delay
+sink  = $output_media_latency@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$output_wired_headphone
+flags = disable_notify, refresh_always, $sink_port_change_delay
 delay = $delay_time
 
 [device]
 type  = headphoneforcall
-sink  = droid.output.primary@equals:"true"
-ports = droid.output.primary@equals:"true"->output-wired_headphone
+sink  = $output_primary@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$output_wired_headphone
 flags = refresh_always, delayed_port_change
 delay = 200
 
 [device]
 type  = headphoneforalien
-sink  = $sink_class_voip@equals:"true"
-ports = droid.output.primary@equals:"true"->output-wired_headphone
+sink  = $sink_class_voip@equals:$voip_equals
+ports = $output_primary@equals:$output_equals->$output_wired_headphone
 flags = refresh_always
 
 [device]
 type  = lineout
-sink  = droid.output.media_latency@equals:"true"
-ports = droid.output.primary@equals:"true"->output-wired_headphone
-flags = disable_notify, refresh_always, $droid_sink_port_change_delay
+sink  = $output_media_latency@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$output_wired_headphone
+flags = disable_notify, refresh_always, $sink_port_change_delay
 delay = $delay_time
 
 [device]
 type  = lineoutforcall
-sink  = droid.output.primary@equals:"true"
-ports = droid.output.primary@equals:"true"->output-wired_headphone
+sink  = $output_primary@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$output_wired_headphone
 flags = refresh_always, delayed_port_change
 delay = 200
 
 [device]
 type  = lineoutforalien
-sink  = $sink_class_voip@equals:"true"
-ports = droid.output.primary@equals:"true"->output-wired_headphone
+sink  = $sink_class_voip@equals:$voip_equals
+ports = $output_primary@equals:$output_equals->$output_wired_headphone
 flags = refresh_always
 
 [device]
 type  = ihfandtvout
-sink  = droid.output.media_latency@equals:"true"
-ports = droid.output.primary@equals:"true"->output-wired_headphone
+sink  = $output_media_latency@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$output_wired_headphone
 
 [device]
 type  = tvout
-sink  = droid.output.media_latency@equals:"true"
-ports = droid.output.primary@equals:"true"->output-wired_headphone
+sink  = $output_media_latency@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$output_wired_headphone
 
 [device]
 type   = microphone
-source = droid.input.builtin@equals:"true"
-ports  = droid.input.builtin@equals:"true"->$droid_source_input_microphone
+source = $input_builtin@equals:$input_equals
+ports  = $input_builtin@equals:$input_equals->$source_input_microphone
 
 [device]
 type   = backmicrophone
-source = droid.input.builtin@equals:"true"
-ports = droid.input.builtin@equals:"true"->$droid_source_input_backmicrophone
+source = $input_builtin@equals:$input_equals
+ports = $input_builtin@equals:$input_equals->$source_input_backmicrophone
 
 [device]
 type  = ihf
-sink  = droid.output.media_latency@equals:"true"
-ports = droid.output.primary@equals:"true"->output-speaker
-flags = refresh_always, $droid_sink_port_change_delay
+sink  = $output_media_latency@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$output_speaker
+flags = refresh_always, $sink_port_change_delay
 delay = $delay_time
 
 [device]
 type  = ihfforcall
-sink  = droid.output.media_latency@equals:"true"
-ports = droid.output.primary@equals:"true"->output-speaker
+sink  = $output_media_latency@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$output_speaker
 flags = refresh_always
 
 [device]
 type  = ihfforalien
-sink  = $sink_class_voip@equals:"true"
-ports = droid.output.primary@equals:"true"->output-speaker
+sink  = $sink_class_voip@equals:$voip_equals
+ports = $output_primary@equals:$output_equals->$output_speaker
 flags = refresh_always
 
 [device]
 type   = voicecall
-source = droid.input.external@equals:"true"
-ports  = droid.input.external@equals:"true"->input-voice_call
+source = $input_external@equals:$input_equals
+ports  = $input_external@equals:$input_equals->$input_voice_call
 
 [device]
 type = null
