--- a/sparse/etc/pulse/xpolicy.conf.d/bluez5.conf
+++ b/sparse/etc/pulse/xpolicy.conf.d/bluez5.conf
@@ -10,15 +10,15 @@ flags   = disable_notify
 type    = bta2dp
 name0    = startswith:"bluez_card"
 profile0 = a2dp_sink
-name1    = equals:$droid_card
-profile1 = $droid_card_profile
+name1    = equals:$card
+profile1 = $card_profile
 flags1   = disable_notify
 
 [card]
 type    = bta2dpforalien
 name0    = startswith:"bluez_card"
 profile0 = a2dp_sink
-name1    = equals:$droid_card
+name1    = equals:$card
 profile1 = communication
 flags1   = disable_notify
 
@@ -26,8 +26,8 @@ flags1   = disable_notify
 type    = bthsp
 name0    = startswith:"bluez_card"
 profile0 = headset_head_unit
-name1    = equals:$droid_card
-profile1 = $droid_card_profile
+name1    = equals:$card
+profile1 = $card_profile
 flags1   = disable_notify
 
 [card]
@@ -35,7 +35,7 @@ type    = bthspforcall
 name0    = startswith:"bluez_card"
 profile0 = headset_head_unit
 flags0   = notify_profile_changed
-name1    = equals:$droid_card
+name1    = equals:$card
 profile1 = voicecall
 flags1   = disable_notify
 
@@ -43,7 +43,7 @@ flags1   = disable_notify
 type    = bthspforalien
 name0    = startswith:"bluez_card"
 profile0 = headset_head_unit
-name1    = equals:$droid_card
+name1    = equals:$card
 profile1 = communication
 flags1   = disable_notify
 
@@ -51,15 +51,15 @@ flags1   = disable_notify
 type    = bthfp
 name0    = startswith:"bluez_card"
 profile0 = headset_head_unit
-name1    = equals:$droid_card
-profile1 = $droid_card_profile
+name1    = equals:$card
+profile1 = $card_profile
 flags1   = disable_notify
 
 [card]
 type    = bthfpforcall
 name0    = startswith:"bluez_card"
 profile0 = headset_head_unit
-name1    = equals:$droid_card
+name1    = equals:$card
 profile1 = voicecall
 flags1   = disable_notify
 
@@ -67,13 +67,13 @@ flags1   = disable_notify
 type    = bthfpforalien
 name0    = startswith:"bluez_card"
 profile0 = headset_head_unit
-name1    = equals:$droid_card
+name1    = equals:$card
 profile1 = communication
 flags1   = disable_notify
 
 [card]
 type    = ihfandheadset
-name0   = equals:$droid_card
+name0   = equals:$card
 profile0= ringtone
 name1    = startswith:"bluez_card"
 profile1 = off
@@ -81,7 +81,7 @@ flags1   = disable_notify
 
 [card]
 type    = ihfandheadphone
-name0   = equals:$droid_card
+name0   = equals:$card
 profile0= ringtone
 name1    = startswith:"bluez_card"
 profile1 = off
@@ -89,7 +89,7 @@ flags1   = disable_notify
 
 [card]
 type    = ihfandlineout
-name0   = equals:$droid_card
+name0   = equals:$card
 profile0= ringtone
 name1   = startswith:"bluez_card"
 profile1= off
@@ -97,15 +97,15 @@ flags1  = disable_notify
 
 [card]
 type    = headset
-name0   = equals:$droid_card
-profile0= $droid_card_profile
+name0   = equals:$card
+profile0= $card_profile
 name1    = startswith:"bluez_card"
 profile1 = off
 flags1   = disable_notify
 
 [card]
 type    = headsetforcall
-name0   = equals:$droid_card
+name0   = equals:$card
 profile0= voicecall
 name1    = startswith:"bluez_card"
 profile1 = off
@@ -113,7 +113,7 @@ flags1   = disable_notify
 
 [card]
 type    = headsetforalien
-name0   = equals:$droid_card
+name0   = equals:$card
 profile0= communication
 name1    = startswith:"bluez_card"
 profile1 = off
@@ -121,15 +121,15 @@ flags1   = disable_notify
 
 [card]
 type    = headphone
-name0   = equals:$droid_card
-profile0= $droid_card_profile
+name0   = equals:$card
+profile0= $card_profile
 name1    = startswith:"bluez_card"
 profile1 = off
 flags1   = disable_notify
 
 [card]
 type    = headphoneforcall
-name0   = equals:$droid_card
+name0   = equals:$card
 profile0= voicecall
 name1    = startswith:"bluez_card"
 profile1 = off
@@ -137,7 +137,7 @@ flags1   = disable_notify
 
 [card]
 type    = headphoneforalien
-name0   = equals:$droid_card
+name0   = equals:$card
 profile0= communication
 name1    = startswith:"bluez_card"
 profile1 = off
@@ -145,15 +145,15 @@ flags1   = disable_notify
 
 [card]
 type    = lineout
-name0   = equals:$droid_card
-profile0= $droid_card_profile
+name0   = equals:$card
+profile0= $card_profile
 name1   = startswith:"bluez_card"
 profile1= off
 flags1  = disable_notify
 
 [card]
 type    = lineoutforcall
-name0   = equals:$droid_card
+name0   = equals:$card
 profile0= voicecall
 name1   = startswith:"bluez_card"
 profile1= off
@@ -161,7 +161,7 @@ flags1  = disable_notify
 
 [card]
 type    = lineoutforalien
-name0   = equals:$droid_card
+name0   = equals:$card
 profile0= communication
 name1   = startswith:"bluez_card"
 profile1= off
@@ -169,15 +169,15 @@ flags1  = disable_notify
 
 [card]
 type    = ihfandtvout
-name0   = equals:$droid_card
-profile0= $droid_card_profile
+name0   = equals:$card
+profile0= $card_profile
 name1    = startswith:"bluez_card"
 profile1 = off
 flags1   = disable_notify
 
 [card]
 type    = ihfforcall
-name0   = equals:$droid_card
+name0   = equals:$card
 profile0= voicecall
 name1    = startswith:"bluez_card"
 profile1 = off
@@ -185,15 +185,15 @@ flags1   = disable_notify
 
 [card]
 type    = ihf
-name0   = equals:$droid_card
-profile0= $droid_card_profile
+name0   = equals:$card
+profile0= $card_profile
 name1    = startswith:"bluez_card"
 profile1 = off
 flags1   = disable_notify
 
 [card]
 type    = ihfforalien
-name0   = equals:$droid_card
+name0   = equals:$card
 profile0= communication
 name1    = startswith:"bluez_card"
 profile1 = off
