--- a/sparse/etc/pulse/xpolicy.conf.d/bluez5_earpiece.conf
+++ b/sparse/etc/pulse/xpolicy.conf.d/bluez5_earpiece.conf
@@ -1,6 +1,6 @@
 [card]
 type    = earpiece
-name0   = equals:$droid_card
+name0   = equals:$card
 profile0= voicecall
 name1    = startswith:"bluez_card"
 profile1 = off
@@ -8,7 +8,7 @@ flags1   = disable_notify
 
 [card]
 type    = earpieceforcall
-name0   = equals:$droid_card
+name0   = equals:$card
 profile0= voicecall
 name1    = startswith:"bluez_card"
 profile1 = off
@@ -16,7 +16,7 @@ flags1   = disable_notify
 
 [card]
 type    = earpieceforalien
-name0   = equals:$droid_card
+name0   = equals:$card
 profile0= communication
 name1    = startswith:"bluez_card"
 profile1 = off
