--- a/sparse/etc/pulse/xpolicy.conf.d/earpiece.conf
+++ b/sparse/etc/pulse/xpolicy.conf.d/earpiece.conf
@@ -1,22 +1,22 @@
 [device]
 type  = earpieceandtvout
-sink  = droid.output.primary@equals:"true"
-ports = droid.output.primary@equals:"true"->output-earpiece
+sink  = $output_primary@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$output_earpiece
 
 [device]
 type  = earpieceforcall
-sink  = droid.output.primary@equals:"true"
-ports = droid.output.primary@equals:"true"->output-earpiece
+sink  = $output_primary@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$output_earpiece
 flags = delayed_port_change
 delay = 200
 
 [device]
 type  = earpiece
-sink  = droid.output.primary@equals:"true"
-ports = droid.output.primary@equals:"true"->output-earpiece
+sink  = $output_primary@equals:$output_equals
+ports = $output_primary@equals:$output_equals->$output_earpiece
 
 [device]
 type  = earpieceforalien
-sink  = $sink_class_voip@equals:"true"
-ports = droid.output.primary@equals:"true"->output-earpiece
+sink  = $sink_class_voip@equals:$voip_equals
+ports = $output_primary@equals:$output_equals->$output_earpiece
 flags = refresh_always
