--- a/sparse/etc/pulse/xpolicy.conf.d/bluez5.conf
+++ b/sparse/etc/pulse/xpolicy.conf.d/bluez5.conf
@@ -50,7 +50,7 @@ flags1   = disable_notify
 [card]
 type    = bthfp
 name0    = startswith:"bluez_card"
-profile0 = handsfree_head_unit
+profile0 = headset_head_unit
 name1    = equals:$card
 profile1 = $card_profile
 flags1   = disable_notify
@@ -58,7 +58,7 @@ flags1   = disable_notify
 [card]
 type    = bthfpforcall
 name0    = startswith:"bluez_card"
-profile0 = handsfree_head_unit
+profile0 = headset_head_unit
 name1    = equals:$card
 profile1 = voicecall
 flags1   = disable_notify
@@ -66,7 +66,7 @@ flags1   = disable_notify
 [card]
 type    = bthfpforalien
 name0    = startswith:"bluez_card"
-profile0 = handsfree_head_unit
+profile0 = headset_head_unit
 name1    = equals:$card
 profile1 = communication
 flags1   = disable_notify
